--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
     <h3>Forms</h3>
     <img src="Forms.png" width = "800" height = "400">
     <ol>
-    <li class = "textcolor4">I learnt how to develop a form using text inputs, radio buttons, checkboxes, a submit button and a text area </a></li>
-    <li class = "textcolor4">I learnt how to change the alignment of text using CSS</li>
-    <li class = "textcolor4">I learnt about text validation and how it can be used to verify passwords and emails</li>
+        <li class = "textcolor4">I learnt how to develop a form using text inputs, radio buttons, checkboxes, a submit button and a text area </a></li>
+        <li class = "textcolor4">I learnt how to change the alignment of text using CSS</li>
+        <li class = "textcolor4">I learnt about text validation and how it can be used to verify passwords and emails</li>
+    </ol>
     
-    
+    <!-- <h1 class = "textcolor">Week 2 Dev Blog</h1>
+    <img src="" width = "1000" height = "1000"> -->
 
-    <h1 class = "textcolor">Week 1 Dev Blog</h1>
-    <h2 class = "textcolor2">Intro</h2>
-    <h3 class = "textcolor3">to</h3>
-    <h3>HTML</h3>
+        <h1 class = "textcolor">Week 1 Dev Blog</h1>
+        <h2 class = "textcolor2">Intro</h2>
+        <h3 class = "textcolor3">to</h3>
+        <h3>HTML</h3>
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" width = "250" height = "250">
     <ol>
         <li class = "textcolor4">I started coding html and created my first webpage</li>
