--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
         <li class = "textcolor4">I learnt about text validation and how it can be used to verify passwords and emails</li>
     </ol>
     
-    <!-- <h1 class = "textcolor">Week 2 Dev Blog</h1>
-    <img src="" width = "1000" height = "1000"> -->
+    <h1 class = "textcolor">Week 2 Dev Blog</h1>
+    <h2 class = "textcolor2">Intro</h2>
+    <h3 class = "textcolor3">to</h3>
+    <h3>semantics</h3>
+    <img src="CSS3_logo.png" width = "250" height = "250">
+    <ol>
+        <li class = "textcolor4">I learnt different types of semantics such as header, nav, article and many more</li>
+        <li class = "textcolor4">I learnt how to use CSS to style the different elements in HTML</li>
+    </ol>
 
         <h1 class = "textcolor">Week 1 Dev Blog</h1>
         <h2 class = "textcolor2">Intro</h2>
