--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h2 class = "textcolor2">Intro</h2>
     <h3 class = "textcolor3">to</h3>
     <h3>Forms</h3>
-    <img src="Forms.png" width = "250" height = "25-">
+    <img src="Forms.png" width = "800" height = "400">
     <ol>
         <li class = "textcolor4">I learnt how to develop a form using text inputs, radio buttons, checkboxes, a submit button and a text area </a></li>
         <li class = "textcolor4">I learnt how to change the alignment of text using CSS</li>
