--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
     <body>
         
         <ul>
+            <li><a href = "#">Week 8</a></li>
+            <li><a href = "#">Week 7</a></li>
+            <li><a href = "#">Week 6</a></li>
             <li><a href = "#">Week 5</a></li>
             <li><a href = "#">Week 4</a></li>
             <li><a href = "#">Week 3</a></li>
             <li><a href = "#">Week 2</a></li>
             <li><a href = "#">Week 1</a></li>
         </ul>
+        <h1 class = "textcolor">Week 8 Dev Blog</h1>
+        <h2 class = "textcolor2">Intro</h2>
+        <h3 class = "textcolor3">of</h3>
+        <h3>APIs and attributes</h3>
+        <br><img src="api.png" class="large_pic">
+        <ol  class="text">
+            <li class = "textcolor4"> I learnt how to use impliment APIs in my website to enhance user experience</li>
+            <li class = "textcolor4"> I learnt to use APIs to allow software components to communicate with my website and display information I need</li>
+        </ol>
         
         <h1 class = "textcolor">Week 7 Dev Blog</h1>
         <h2 class = "textcolor2">Intro</h2>
