--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
             <li><a href = "#">Week 2</a></li>
             <li><a href = "#">Week 1</a></li>
         </ul>
+
+        <h1 class = "textcolor">Week 9 Dev Blog</h1>
+        <h2 class = "textcolor2">Intro</h2>
+        <h3 class = "textcolor3">to</h3>
+        <h3>Bootstrap</h3>
+        <br><img src="bootstrap1.png" class="large_pic">
+        <br><img src="bootstrap2.png" class="large_pic">
+        <ol  class="text">
+            <li class = "textcolor4"> I learnt how to use bootstrap to simplify website building</li>
+            <li class = "textcolor4"> I learnt to use the pre-built components of bootstrap to further ease my website building</li>
+        </ol>
+
         <h1 class = "textcolor">Week 8 Dev Blog</h1>
         <h2 class = "textcolor2">Intro</h2>
-        <h3 class = "textcolor3">of</h3>
+        <h3 class = "textcolor3">to</h3>
         <h3>APIs and attributes</h3>
         <br><img src="api.png" class="large_pic">
         <ol  class="text">
