--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <body>
         
         <ul>
+            <li><a href = "#">Week 12</a></li>
+            <li><a href = "#">Week 9</a></li>
             <li><a href = "#">Week 8</a></li>
             <li><a href = "#">Week 7</a></li>
             <li><a href = "#">Week 6</a></li>
@@ -18,6 +20,16 @@
             <li><a href = "#">Week 2</a></li>
             <li><a href = "#">Week 1</a></li>
         </ul>
+
+        <h1 class = "textcolor">Week 12 Dev Blog</h1>
+        <h2 class = "textcolor2">Intro</h2>
+        <h3 class = "textcolor3">to</h3>
+        <h3>RESTDB and NoSQL</h3>
+        <br><img src="restdb.png" class="large_pic">
+        <ol  class="text">
+            <li class = "textcolor4"> I learnt to use restdb to store data</li>
+            <li class = "textcolor4"> I learnt to manipulate and retrieve data from a structured data format in the form of tables</li>
+        </ol>
 
         <h1 class = "textcolor">Week 9 Dev Blog</h1>
         <h2 class = "textcolor2">Intro</h2>
